# Monopoly

Dev/Client/Monopoly/Monopoly/: CMakeLists.txt
Dev/Client/monopoly3/: CMakeLists.txt  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
Dev/Client/monopoly3/.qtcreator/: CMakeLists.txt.user.2347e06  CMakeLists.txt.user.db1e92c
Dev/Client/monopoly3/images/: Unterricht
Dev/ClientServerImpl/: CSV_test.csv
Dev/ClientServerImpl/Client/Client/: CMakeLists.txt  main.cpp
Dev/ClientServerImpl/Client/Client/Client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkclient.cpp  networkclient.h
Dev/ClientServerImpl/MonopolyMobile/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Dev/ClientServerImpl/MonopolyMobile/images/: mainwindow.ui
Dev/ClientServerImpl/Server/MonopolyServer/: CMakeLists.txt  board.cpp  board.h  cardfield.cpp  cardfield.h  game.cpp  game.h  gameserver.cpp  gameserver.h  gotojailfield.h  jailfield.cpp  jailfield.h  main.cpp  player.cpp  player.h  propertyfield.cpp  propertyfield.h  railroadfield.cpp  startfield.cpp  startfield.h  streetfield.cpp  streetfield.h  utilityfield.cpp  utilityfield.h
Dev/ClientServerImpl/monopoly3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  networkclient.cpp  networkclient.h
Dev/Server/MonopolyServer/: cardfield.cpp  field.cpp  gameserver.cpp  gotojailfield.cpp  jailfield.cpp  main.cpp  propertyfield.h  railroadfield.h  taxfield.cpp  taxfield.h
Doku/: Angebot.docx  Mockup Monopoly.docx  Preiskalkulation.xlsx  uml.drawio
